--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
@@ -14,6 +15,7 @@
     "@nuxtjs/moment": "^1.6.1",
     "dotenv": "^10.0.0",
     "nuxt": "^2.15.8",
+    "push-dir": "^0.4.1",
     "vue": "^2.6.14",
     "vuetify": "^2.6.1",
     "webpack": "^4.46.0"
