--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "gitdir": "push-dir --dir=dist --branch=gh-pages --cleanup",
-    "deploy": "nuxt generate && git add . && git commit -m 'deploy' && npm run gitdir"
+    "pushDir": "push-dir --dir=dist --branch=gh-pages --cleanup",
+    "deploy": "nuxt generate && git add . && git commit -m 'deploy' && npm run pushDir"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
