--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "pushDir": "push-dir --dir=dist --branch=gh-pages --cleanup",
-    "deploy": "nuxt generate && git add . && git commit -m 'deploy' && npm run pushDir"
+    "deploy": "nuxt build && nuxt generate && git add . && git commit -m 'deploy' && npm run pushDir"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
