--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "pushDir": "push-dir --dir=dist --branch=gh-pages --cleanup",
+    "pushMaster": "git add . && git commit -m 'deploy' && git push -u origin master",
     "deploy": "nuxt generate && git add . && git commit -m 'deploy' && npm run pushDir"
   },
   "dependencies": {
