--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "generate": "nuxt generate",
     "pushDir": "push-dir --dir=dist --branch=gh-pages --cleanup",
     "pushMaster": "git add . && git commit -m 'deploy' && git branch -M master && git push -u origin master",
-    "deploy": "nuxt generate && git add . && git commit -m 'deploy' && npm run pushDir"
+    "deploy": "nuxt generate && git add . && git commit -m 'deploy' && npm run pushMaster"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
