--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "gitCommit": "git add . && git commit -m 'deploy'",
-    "pushDir": "nuxt generate && npm run gitCommit && push-dir --dir=dist --branch=gh-pages --cleanup",
-    "pushMaster": "npm run gitCommit && git branch -M master && git push -u origin master",
-    "deploy": "npm run pushMaster"
+    "gitCommit": "git add . && git commit -m 'deploy' && git push -u origin master",
+    "deploy": "nuxt generate && npm run gitCommit && push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
