--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/moment": "^1.6.1",
+    "animate.css": "^4.1.1",
     "dotenv": "^10.0.0",
     "nuxt": "^2.15.8",
+    "typed.js": "^2.0.12",
     "vue": "^2.6.14",
     "vuetify": "^2.6.1",
     "webpack": "^4.46.0"
