--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "gitCommit": "git add . && git commit -m 'deploy'",
-    "pushDir": "nuxt generate && npm run gitCommit && push-dir --dir=dist --branch=gh-pages --cleanup",
-    "pushMaster": "npm run gitCommit && git branch -M master && git push -u origin master",
-    "deploy": "npm run pushDir"
+    "pushWeb": "nuxt generate && npm run gitCommit && push-dir --dir=dist --branch=gh-pages --cleanup",
+    "pushGit": "npm run gitCommit && git branch -M master && git push -u origin master",
+    "deploy": "npm run pushWeb"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
