--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "gitCommit": "git add . && git commit -m 'deploy'",
-    "pushPages": "nuxt generate && npm run gitCommit && push-dir --dir=dist --branch=gh-pages --cleanup",
-    "pushGit": "npm run gitCommit && git branch -M master && git push -u origin master"
+    "generate": "nuxt generate"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
